@@ -5,6 +5,8 @@ Date: ????
     - Add option for revert tint on mining tiles
   Changes:
     - Changed crafting time of tinted concrete to be double of hazard variant
+  Bugfixes:
+    - Loading the mod in a map with already unlocked technology will now unlock the recipes correctly
 ---------------------------------------------------------------------------------------------------
 Version: 1.1.0
 Date: 2020-10-01
